--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,6 +10,8 @@ $red_fa:#fa5a60;
 $red_d6:#d66573;
 
 $green_00:#007b85;
+$green_0a:#00A69A;
+$green_94:#94EEE7;
 $gold_d9:#d9811f;
 
 
@@ -28,6 +30,7 @@ $facebook:#3b5898;
 $placeholder-text-color : #424242;
 
 $google_green: #008744;
+
 $google_blue: #0057e7;
 $google_red: #d62d20;
 $google_yellow: #ffa700;
