--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,33 +1,41 @@
 $fonts_path: "../fonts/" !default;
 $images_path: "../img/" !default;
 
-$black_33 : #333333;
-$black_4a:#4a4a4a;
-$black_28:#282828;
-$black_2a:#2a2828;
+$black_33: #333333;
+$black_4a: #4a4a4a;
+$black_28: #282828;
+$black_2a: #2a2828;
 
-$red_fa:#fa5a60;
-$red_d6:#d66573;
+$red_fa: #fa5a60;
+$red_d6: #d66573;
 
-$green_00:#007b85;
-$green_0a:#00A69A;
-$green_94:#94EEE7;
-$gold_d9:#d9811f;
+$green_00: #007b85;
+$green_0a: #00A69A;
+$green_94: #94EEE7;
+$gold_d9: #d9811f;
+$gold_ce: #CEAF7C;
 
+$grey_9b: #9b9b9b;
+$grey_f0: #f0f0f0;
+$blue_00:#008CDD;
+$grey_fa:#fafafa;
+$grey_c6: #c6c5c5;
+$grey_c8: #c8c8c8;
+$grey_80: #808080;
+$grey_4a: #A4A2A2;
+$grey_5e: #5e5f5f;
+$grey_77: #777879;
+$grey_df: #dfdfdf;
+$grey_97: #979797;
+$grey_ac: #acacac;
+$grey_ec: #ececec;
+$grey_f7: #f7f7f7;
+$grey_e3:#e3e3e3;
+$grey_f3:#F3F3F3;
 
-$grey_9b:#9b9b9b;
-$grey_f0:#f0f0f0;
-$grey_c6:#c6c5c5;
-$grey_c8:#c8c8c8;
-$grey_80:#808080;
-$grey_4a:#A4A2A2;
-$grey_df:#dfdfdf;
-$grey_97:#979797;
-$grey_f7:#f7f7f7;
+$facebook: #3b5898;
 
-$facebook:#3b5898;
-
-$placeholder-text-color : #424242;
+$placeholder-text-color: #424242;
 
 $google_green: #008744;
 
