feat: create checkout pages and contact pages responsiveness

--- a/scss/_contacts.scss
+++ b/scss/_contacts.scss
@@ -130,5 +130,19 @@ main{
             }
 
         }
+
+        @media (max-width: 650px)
+        {
+            width: 380px;
+
+            .confirmation_block
+            {
+                .desc
+                {
+                    padding-left: 5px;
+                    padding-right: 5px;
+                }
+            }
+        }
     }
 }
