--- a/scss/_checkout.scss
+++ b/scss/_checkout.scss
@@ -316,6 +316,45 @@ main
                 }
             }
 
+            @media (max-width: 650px)
+            {
+                width: 380px;
+
+                .checkout_header
+                {
+                    .breadcrumb_block
+                    {
+                        display: block;
+                        padding-left: 15px;
+                        margin-top: -5px;
+                        padding-bottom: 7px;
+                    }
+                }
+
+                .step_block
+                {
+                    width: 100%;
+                    @include margin_left_right(0);
+                    left:0;
+                }
+
+                .cart_preview_block
+                {
+                    width: 100%;
+                    left:0;
+                    @include margin_left_right(0);
+                }
+
+                .confirmation_block
+                {
+                    .desc
+                    {
+                        padding-left: 5px;
+                        padding-right: 5px;
+                    }
+                }
+            }
+
         }
 
         &.checkout_step_2
