--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -981,13 +981,13 @@
 
         &:checked + .switch-label
         {
-            background: _rgba($green_0a,.4);
+            background: _rgba($red_fa,.4);
         }
 
         &:checked ~ .switch-handle
         {
             left: 13px;
-            background: $green_0a;
+            background: $red_fa;
             @include box-shadow(0px 1px 3px 0px rgba(33, 33, 33, .35));
         }
 
