feat: create boutique page without responsiveness, Did the responsive view for add product pages

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -17,8 +17,8 @@ $gold_ce: #CEAF7C;
 
 $grey_9b: #9b9b9b;
 $grey_f0: #f0f0f0;
-$blue_00:#008CDD;
-$grey_fa:#fafafa;
+$blue_00: #008CDD;
+$grey_fa: #fafafa;
 $grey_c6: #c6c5c5;
 $grey_c8: #c8c8c8;
 $grey_80: #808080;
@@ -30,8 +30,12 @@ $grey_97: #979797;
 $grey_ac: #acacac;
 $grey_ec: #ececec;
 $grey_f7: #f7f7f7;
-$grey_e3:#e3e3e3;
-$grey_f3:#F3F3F3;
+$grey_e3: #e3e3e3;
+$grey_f3: #F3F3F3;
+
+$grey_70: #706A6B;
+$grey_85: #858585;
+$grey_cf: #cfcfcf;
 
 $facebook: #3b5898;
 
